--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
 </head>
 <body>
     <div class="banner">
-        
+        <div class="navbar">
+            <img src="img/logo.png" class="logo">
+            <ul>
+                <li><a href="#">Home</li>
+                <li><a href="#">Bedroom</li>
+                <li><a href="#">Dining</li>
+                <li><a href="#">Kitchen</li>
+                <li><a href="#">Backyard</li>
+            </ul>
+        </div>
+
+        <div class="content">
+            <h1>Design Your House</h1>
+            <p>Subscribe WebX IT LAB Youtube Channel to watch videos,<br> Press the bell icon to grt latest updests.</p>
+            <div>
+                <button type="button"><span></span>Watch More</button>
+                <button type="button"><span></span>Subscribe</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
