--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <div class="navbar">
             <img src="img/logo.png" class="logo">
             <ul>
-                <li><a href="#">Home</li>
-                <li><a href="#">Bedroom</li>
-                <li><a href="#">Dining</li>
-                <li><a href="#">Kitchen</li>
-                <li><a href="#">Backyard</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Bedroom</a></li>
+                <li><a href="#">Dining</a></li>
+                <li><a href="#">Kitchen</a></li>
+                <li><a href="#">Backyard</a></li>
             </ul>
         </div>
 
